# web-dict-viewer

./: .gitmodules  CMakeLists.txt  README.md  imgui.ini
examples/: CMakeLists.txt  PyWS.cpp
examples/Final/: CMakeLists.txt  PyWS.cpp  draw.py  index.html
examples/Final/Sources/Texts/: data.txt
examples/Final/drawwindows/: __init__.py  dictviewer.py
examples/demo-null/: index.html  main.cpp
src/: CMakeLists.txt
